# talkOnAlgorithms

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  beamerPack.sty  commonsettings.sty  flake.nix  gothic.sty  lecture.sty
01/: bsearch.ts  lsearch.ts  toa-01.tex
02/: toa-02.tex
03/: bsort.ts  jigzaw.blend  qsort.ts  toa-03.tex  zigzaw.blend
04/: memo.md  routes.txt  toa-04-part1.tex  toa-04.tex  toa-05.tex
05/: toa-05.tex
06/: toa-06.tex
07/: toa-07.tex
08/: toa-08.tex
benches/: search_benchmark.rs  sort_benchmark.rs  sort_linear_benchmark.rs
src/: bsearch.rs  bsort.rs  dijkstra.rs  lib.rs  lsearch.rs  main.rs  memo.rs  qsort.rs
