[package]
name = "toa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["Narazaki Shuji <shujinarazaki@protonmail.com>"]
description = "A talk on Algorithms"
repository = "https://github.com/shnarazk/talkOnAlgorithms"

[dependencies]
